Compiler/tests/bad/function8.nx
type t = [0 .. 10];

function somar(x : int, y : int) : int
{
    return t;
}
